Modified Forwarding module to include virtual Link functionality